use parent compiler settings